# LTE_Lib

./: CMakeLists.txt  README.md  main.cpp  run_demo.sh
FDD_Case/: CQI_36.101_9.2.1.1_1_1.txt  CQI_36.101_9.2.1.1_1_2.txt  CQI_36.101_9.2.1.1_2_1.txt  CQI_36.101_9.2.1.1_2_2.txt  CQI_36.101_9.2.2.1_1.txt  CQI_36.101_9.2.2.1_2.txt  CQI_36.101_9.3.1.1.1_1.txt  CQI_36.101_9.3.1.1.1_2.txt  CQI_36.101_9.3.2.1.1_1_1.txt  CQI_36.101_9.3.2.1.1_1_2.txt  CQI_36.101_9.3.2.1.1_3_1.txt  CQI_36.101_9.3.2.1.1_3_2.txt  CQI_36.101_9.3.3.1.1_1.txt  CQI_36.101_9.3.3.1.1_2.txt  CQI_36.101_9.3.4.1.1_1.txt  CQI_36.101_9.3.4.1.1_2.txt  PBCH_36.101_8.6.1.1.txt  PBCH_36.101_8.6.1.2.1.txt  PBCH_36.101_8.6.1.2.2.txt  PDCCH_36.101_8.4.1.1.txt  PDCCH_36.101_8.4.1.2.1.txt  PDCCH_36.101_8.4.1.2.2.txt  PHICH_36.101_8.5.1.1_1.txt  PHICH_36.101_8.5.1.1_2.txt  PHICH_36.101_8.5.1.2.1_1.txt  PHICH_36.101_8.5.1.2.2.txt  PMI_36.101_9.4.1.1.1_1.txt  PMI_36.101_9.4.1.2.1_1.txt  PMI_36.101_9.4.2.1.1_1.txt  PMI_36.101_9.4.2.2.1_1.txt  RI_36.101_9.5.1.1_1.txt  RI_36.101_9.5.1.1_2.txt  RI_36.101_9.5.1.1_3.txt  TM1_36.101_8.2.1.1.1_1.txt  TM1_36.101_8.2.1.1.1_10A.txt  TM1_36.101_8.2.1.1.1_11A.txt  TM1_36.101_8.2.1.1.1_12A.txt  TM1_36.101_8.2.1.1.1_13A.txt  TM1_36.101_8.2.1.1.1_14A.txt  TM1_36.101_8.2.1.1.1_15A.txt  (+27 more)
TDD_Case/: CQI_36.101_9.2.1.2_1_1.txt  CQI_36.101_9.2.1.2_1_2.txt  CQI_36.101_9.2.2.2_1.txt  CQI_36.101_9.2.2.2_2.txt  CQI_36.101_9.3.1.1.2_1.txt  CQI_36.101_9.3.1.1.2_2.txt  CQI_36.101_9.3.2.2.1_1.txt  CQI_36.101_9.3.2.2.1_2.txt  CQI_36.101_9.3.3.1.2_1.txt  CQI_36.101_9.3.3.1.2_2.txt  (+63 more)
header/UE/: UE.h
(+45 files in other folders)
